fix border and spacing issue for .nav-items when icon-burger is clicked

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -38,7 +38,7 @@ h4 {
     left: 0px;
     right: 0px;
     display: flex;
-    margin: 30px 160px 30px 160px;
+    margin: 30px 160px 0px 160px;
     justify-content: space-between;
     align-items: center;
 }
@@ -67,16 +67,7 @@ nav .logo {
     z-index: 9;
 }
 
-nav .navbar-links {
-    display: flex;
-    /* gap: 60px; */
-    list-style: none;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-nav .navbar-links a {
+.nav-items {
     color: black;
     text-decoration: none;
     cursor: pointer;
@@ -91,9 +82,14 @@ nav li {
 
 .navbar-links {
     font-family: 'Raleway', 'Lato', sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     padding-right: 12px;
-    padding-left: 6px;
+    padding-left: 30px;
+    padding-right: 30px;
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .navbar-links>li {
@@ -104,14 +100,11 @@ nav li {
     border-right: none;
 }
 
-
-
 #nav-cta {
     transform-origin: center;
     position: relative;
     overflow: hidden;
 }
-
 
 #nav-toggle {
     position: absolute;
@@ -141,7 +134,7 @@ nav .icon-burger .line {
         margin: 30px 10px 0px 30px;
     }
 
-    nav .navbar-links {
+    .navbar-links {
         float: none;
         position: fixed;
         top: 0;
@@ -152,26 +145,27 @@ nav .icon-burger .line {
         width: auto;
         height: auto;
         flex-direction: column;
-        align-items: flex-start;
+        justify-content: space-evenly;
         padding: 0px 0px 0px 60px;
-        background-color: rgba(0, 0, 0, 0.568);
+        background-color: white;
         backdrop-filter: blur(20px);
         overflow: hidden;
-        transition: 0.5s cubic-bezier(0.97, 0.02, 0.44, 0.99);
+        transition: .5s cubic-bezier(0.97, 0.02, 0.44, 0.99);
     }
 
-
-
-    #nav-cta {
-        display: none;
-    }
-
-    nav .navbar-links a {
+    .nav-items {
         font-family: 'raleway', 'lato', sans-serif;
         text-transform: uppercase;
         font-size: 3rem;
-        color: white;
-        font-weight: 600;
+        font-weight: 300;
+    }
+
+    .navbar-links>li {
+        border-right: none;
+    }
+
+    #nav-cta {
+        display: none;
     }
 
     nav .icon-burger {
